Update tests and benchmarks